k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: salaryhelper
  labels:
    name: salaryhelper
    environment: production
